# tools/router/router.go
@@ -1,26 +1,0 @@
-package router
-
-import (
-	"net/http"
-
-	"github.com/labstack/echo/v4"
-	"github.com/labstack/echo/v4/middleware"
-	echoSwagger "github.com/swaggo/echo-swagger"
-
-	"github.com/easedot/goarc/adapters/controller"
-)
-
-func NewRouter(e *echo.Echo, c controller.AppController) *echo.Echo {
-	e.Use(middleware.Logger())
-	e.Use(middleware.Recover())
-	e.Use(middleware.CORS())
-
-	e.GET("/", func(c echo.Context) error {
-		return c.String(http.StatusOK, "Hello, World!")
-	})
-	e.GET("/doc/*", echoSwagger.WrapHandler)
-
-	e.GET("/articles", func(context echo.Context) error { return c.GetArticles(context) })
-
-	return e
-}
